--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Big+Shoulders+Display&display=swap');
+
 body{
     margin: auto;
 }
@@ -6,10 +8,20 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 80px;
+    background-color: #252525;
+}
+
+nav{
+    width: 80%;
 }
 
 ul{
+    width: 100%;
     display: flex;
+    justify-content: center;
+    padding: 0px;
+    margin: 0px;
 }
 
 li{
@@ -17,8 +29,59 @@ li{
     margin: 0 5px 0 5px;
 }
 
+.menu-tag{
+    color: white;
+    text-decoration: none;
+    font-family: 'Big Shoulders Display', cursive;
+}
+
+.menu-tag:hover{
+    text-shadow: 1px 1px 2px white;
+}
+
+.burger-menu__button{
+    top: 0px;
+    left: 30px;
+    position: absolute;
+    z-index: 30;
+    width: 80px;
+    height: 80px;
+}
+
+.burger-menu__lines,
+.burger-menu__lines::after,
+.burger-menu__lines::before {
+    position: absolute;
+    width: 40px;
+    height: 6px;
+    background-color: white;
+}
+
+.burger-menu__lines{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.burger-menu__lines::after{
+    content: '';
+    top: -12px;
+}
+
+.burger-menu__lines::before{
+    content: '';
+    top: 12px;
+}
+
 .home-page-banner{
-text-align: center;
+   width: 100%;
+   height: 500px;
+   text-align: center;
+   background: url(img/baner.png);
+}
+
+h1{
+    margin: 0;
 }
 
 .our-community-partners{
@@ -57,4 +120,16 @@ footer{
 
 .footer-content{
     display: flex;
+}
+
+@media screen and (max-width:700px){
+    .ul-menu{
+        display: none;
+    }
+}
+
+@media screen and (min-width:701px){
+    .burger-menu{
+        display: none;
+    }
 }
